# sovka_agent

./: .gitignore  flask_app.py  locations_for_tour.json  main.py  pyproject.toml
agent/: client.py
data/: mock_retail_data.csv  mockdata.py
prompts/: prompt.csv  prompts.py
settings/: config_settings.py
templates/: index.html
