[tool.poetry]
name = "sovka-agent"
version = "0.1.0"
description = ""
authors = ["Teodor Kovac <teodor.kovac95@gmail.com>"]
readme = "README.md"
packages = [{include = "sovka_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
faker = ">=37.12.0,<38.0.0"
pandas = ">=2.3.3,<3.0.0"
geopy = "*"
flask = "^3.1.2"
openai = "^2.7.1"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
